traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run(){
  var cpt=0;
  do{for (i<- 0 to (getMondeLargeur()-1))
     {for(j<- 0 to( getMondeHauteur()-1))
      {cpt+=1
       setPos(i,j)
       ecritMessage(cpt)}}};
  while(!fin())
}

def fin(){if (getX()==(getMondeLargeur()-1) && getY()==(getMondeHauteur()-1)){return true};else {return false}}